Network-Policies/example-web-stack.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-stack
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: example-stack
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: example-stack
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: example-stack
