Network-Policies/nfs-provisioner-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nfs-provisioner-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nfs-subdir-external-provisioner
  policyTypes:
  - Egress
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 6443
